--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/fragment_weather_degrees"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/text_color_white"
+                android:textColor="@color/white"
                 android:textSize="50sp"
                 card_view:layout_constraintTop_toTopOf="parent"
                 card_view:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:textColor="@color/text_color_white"
+                android:textColor="@color/white"
                 android:textSize="24sp"
                 card_view:layout_constraintTop_toBottomOf="@id/fragment_weather_degrees"
                 card_view:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:textColor="@color/text_color_white"
+                android:textColor="@color/white"
                 android:textSize="24sp"
                 card_view:layout_constraintTop_toTopOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"/>
