--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <!-- Forecast card colors -->
     <color name="forecast_card_divider">#ccc</color>
 
-    <!-- Text Colors -->
+    <!-- Extra Colors -->
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
