--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -17,4 +17,8 @@
     <!-- Extra Colors -->
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="green">#00FF00</color>
+
+    <color name="action_bar">#757575</color>
+    <color name="settings_list_background">#eeeeee</color>
 </resources>
