--- a/src/main/res/layout/list_weather_forecast.xml
+++ b/src/main/res/layout/list_weather_forecast.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view_list_weather"
     android:layout_width="match_parent"
@@ -33,7 +33,7 @@
             android:layout_marginRight="16dp"
             android:background="#CCCCCC" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fragment_weather_item"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
@@ -44,6 +44,6 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
 
 
